--- a/styles.css
+++ b/styles.css
@@ -26,26 +26,26 @@ header {
   height: 4.625rem;
   display: flex;
   align-items: center;
-
-  /* justify-items: flex-end; */
-
-  /* display: flex; */
-
-  /* justify-content: center; */
 }
 
 .homepage {
-  width: 18rem;
-  margin-top: 1.875rem;
+  width: 20rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
 
-.heading {
+h1 {
   font-family: Playfair Display, arial;
   font-size: 50px;
   font-weight: 400;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: -1.25rem 2rem 1rem 2rem;
 }
 
 .text p {
@@ -56,9 +56,9 @@ header {
 }
 
 .collaboration {
-  width: 18rem;
+  width: 14rem;
   height: 3.125rem;
-  margin: 2rem 1rem;
+  margin: 1rem 2rem;
   background-color: #1a2236;
   color: white;
   font-family: Poppins, arial;
