--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
 body {
-  min-width: 375px;
+  min-width: 23.438rem;
   margin: 0;
   padding: 0;
-
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
 }
 
 .menu {
@@ -45,12 +44,13 @@ h1 {
   font-size: 0.875rem;
   line-height: 1.313rem;
   letter-spacing: -0.01rem;
+  margin-top: -2.188rem;
 }
 
 .collaboration {
-  width: 14rem;
+  width: 100%;
   height: 3.125rem;
-  margin: 1rem 2rem;
+  margin-bottom: 1rem;
   background-color: #1a2236;
   color: white;
   font-family: Poppins, arial, sans-serif;
