--- a/styles.css
+++ b/styles.css
@@ -5,22 +5,23 @@ body {
   box-sizing: border-box;
 }
 
-.menu {
-  width: 1.25rem;
-  margin-left: 17.75rem;
-  margin-top: 1.188rem;
-}
-
 header {
   background-image: url(./icons/image_geometry_1.png);
   background-repeat: no-repeat;
   height: 4.625rem;
   display: flex;
+  justify-content: flex-end;
   align-items: center;
 }
 
+.menu-burger {
+  margin-left: 17.75rem;
+  margin-top: 1.188rem;
+  display: flex;
+  margin-right: 1.25rem;
+}
+
 .homepage {
-  width: 20rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -28,22 +29,20 @@ header {
 
 h1 {
   font-family: Playfair Display, arial, sans-serif;
-  font-size: 50px;
+  font-size: 3.125rem;
   font-weight: 400;
 }
 
-.text {
+.container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin: -1.25rem 2rem 1rem 2rem;
+  align-self: auto;
+  margin: -1.875rem 1.25rem 1.25rem 1.25rem;
 }
 
-.text p {
+.container p {
   font-family: Poppins, arial, sans-serif;
   font-size: 0.875rem;
-  line-height: 1.313rem;
-  letter-spacing: -0.01rem;
   margin-top: -2.188rem;
 }
 
@@ -64,6 +63,7 @@ h1 {
 
 .image1 {
   background-image: url(icons/image_geometry_2.png);
-  width: 20rem;
-  height: 10rem;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 30rem;
 }
