Add project previews in index.html Update styles.css

--- a/styles.css
+++ b/styles.css
@@ -65,9 +65,80 @@ h1 {
   background-image: url(icons/image_geometry_2.png);
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 30rem;
+  height: 12rem;
+  margin-bottom: 0rem;
 }
 
 .projects-container {
+  display: grid;
+  grid-template: auto;
+  position: absolute;
+} 
+
+/* .project-card {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  display: grid; 
+
+}
+*/
+.preview {
+  width: 100%;
+}
+
+.project-infor {
+  background-color: #1A2236;
+  display: flex;
+  flex-direction: column;
+  padding: 0.625rem;
+}
+
+.project-name {
+  color: white;
+  font-family: Poppins, arial;
+  font-size: 1.25rem;
+  font-weight: 300;
+  line-height: 1rem;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-left: 20px;
+  padding-top: -20px;
+}
+
+.tech-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: -90px;
+  margin-right: 100px;
+  margin-left: -20px;
+
+}
+
+.tech-list > li {
+  background-color: #98DEDE;
+  list-style-type: none;
+  font-family: Poppins;
+  font-size: 10px;
+  font-weight: 300;
+  margin-top: -1.5rem;
   
+
+}
+
+.see-project {
+  color: white;
+  background-image: url(icons/Union.png);
+  border: 1px solid white;
+  background-repeat: no-repeat;
+  background-position: 90%;
+  width: 8.125rem;
+  margin-top: -0.25rem;
+  margin-left: 20px;
+  padding: 0.625rem;
+  font-weight: 500;
+  font-size: 1rem;
+  text-decoration: none;
+  line-height: 1.5rem;
 }
