--- a/styles.css
+++ b/styles.css
@@ -71,20 +71,16 @@ h1 {
 
 .projects-container {
   display: grid;
-  grid-template: auto;
-  position: absolute;
-} 
-
-/* .project-card {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  display: grid; 
-
+  grid-template-rows: min-content;
 }
-*/
+
+.projects-container > h1 {
+  margin: 1.25rem;
+}
+
 .preview {
   width: 100%;
+  display: block;
 }
 
 .project-infor {
@@ -92,6 +88,7 @@ h1 {
   display: flex;
   flex-direction: column;
   padding: 0.625rem;
+
 }
 
 .project-name {
@@ -100,18 +97,14 @@ h1 {
   font-size: 1.25rem;
   font-weight: 300;
   line-height: 1rem;
-  letter-spacing: 0em;
-  text-align: left;
   margin-left: 20px;
-  padding-top: -20px;
 }
 
 .tech-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  padding-top: -90px;
-  margin-right: 100px;
+  margin-top: -3rem;
   margin-left: -20px;
 
 }
@@ -122,7 +115,9 @@ h1 {
   font-family: Poppins;
   font-size: 10px;
   font-weight: 300;
-  margin-top: -1.5rem;
+  /* margin-top: -1.5rem; */
+  padding: 5px;
+
   
 
 }
@@ -142,3 +137,217 @@ h1 {
   text-decoration: none;
   line-height: 1.5rem;
 }
+
+.about-me-container {
+display: flex;
+flex-direction: column;
+margin-top: 1.5rem;
+margin-right: 0.875rem;
+margin-bottom: 1.688rem;
+margin-left: 1rem;
+}
+
+.knowledge-container {
+  display: grid;
+  grid-template-rows: 289px 289px 289px;
+
+}
+
+.heading2 {
+  font-family: Playfair Display, arial;
+  font-size: 50px;
+  font-weight: 400;
+  line-height: 50px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.description {
+  font-family: Poppins, arial;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.cv-button {
+  width: 288px;
+  height: 50px;
+  background-color: #1A2236;
+  color: white;
+  font-family: Poppins, arial;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: center;
+  background-image: url(icons/ic_download.svg);
+  background-repeat: no-repeat;
+  background-position: 80%;
+  margin-bottom: 20px;
+}
+
+.language {
+  background-color: #1C528A;
+  background-image: url(icons/#.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  color: white;
+}
+
+.frameworks {
+  background-color: #E2505C;
+  background-image: url(icons/Group\ 18.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  color: white;
+}
+
+.skills {
+  background-color: #FEBF52;
+  background-image: url(icons/ic_skills.svg);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  color: white;
+  padding-bottom: 20px;
+}
+h3 {
+  font-family: Poppins, arial;
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 30px;
+  margin-left: 66px;
+  width: 116px;
+  height: 30px;
+
+}
+
+ul {
+
+font-family: Poppins, arial;
+font-size: 18px;
+font-weight: 600;
+line-height: 27px;
+letter-spacing: -0.0525em;
+text-align: left;
+width: 178px;
+height: 135px;
+margin-left: 46px;
+}
+.contact-me {
+  background-color: #F9F9FA;
+  background-image: url(icons/image_geometry_1.png);
+  background-repeat: no-repeat;
+  padding: 6.625rem 0.875rem 1.94rem 1.125rem;
+  display: flex;
+  flex-direction: column;
+  min-height: auto;
+}
+
+.getstarted {
+  font-family: Playfair Display, arial;
+  font-size: 50px;
+  font-weight: 400;
+  line-height: 50px;
+  margin-bottom: 1.25rem;
+
+}
+
+.interest {
+  font-family: Poppins, arial;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 0.875rem;
+
+}
+
+label {
+  font-weight: 400;
+  font-size: 0.625rem;
+  color: #7d7c84;
+}
+ input {
+  margin-bottom: 20px;
+ }
+
+ textarea {
+  height: 7rem;
+  padding: 0.875rem 1rem;
+  display: block;
+  width: 100%;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  box-sizing: border-box;
+  margin: 0;
+  font-size: 0.875rem;
+  color: #1a2236;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+ }
+
+ input {
+  margin-bottom: 0;
+  height: 3.25rem;
+  padding: 1.44rem 1rem 0.31rem 1rem;
+  display: block;
+  width: 100%;
+  border: 1px solid #dfdfe0;
+  border-radius: 4px;
+  box-sizing: border-box;
+  align-items: flex-start;
+  font-size: 0.875rem;
+  color: #1a2236;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+ }
+.social-icons {
+  /* padding: 1.75rem 0.875rem 2.25rem 1.125rem; */
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: auto;
+
+}
+
+
+  
+.get-resume {
+  border: none;
+  background-color: transparent;
+  background-image: url(icons/Union\ \(2\).png);
+  background-repeat: no-repeat;
+  background-position: right center;
+  height: 3rem;
+  color: #92dcdc;
+  display: block;
+  width: 10.25rem;
+  font-weight: 500;
+  font-size: 1rem;
+  text-align: left;
+  margin: 0 auto;
+}
+
+.collaboration {
+  width: 100%;
+  height: 2.75rem;
+  border: none;
+  background-color: #1a2236;
+  margin-top: 1.25rem;
+  font-weight: 500;
+  font-size: 1rem;
+}
+
+.social-icons li {
+  list-style: none;
+}
+
+.footer {
+  padding: 1.75rem 0.875rem 2.25rem 1.125rem;
+  background-color: #1A2236;
+  width: 100%;
+  height: 100px;
+
+}
+
+
