--- a/styles.css
+++ b/styles.css
@@ -27,19 +27,18 @@ header {
   justify-content: flex-start;
 }
 
-
 .container {
   display: flex;
   flex-direction: column;
   align-self: auto;
   margin: -1.875rem 1.25rem 1.25rem 1.25rem;
 }
+
 .container h1 {
   font-family: 'Playfair Display', arial, sans-serif;
   font-size: 3.125rem;
   font-weight: 400;
 }
-
 
 .container p {
   font-family: 'Poppins', arial, sans-serif;
@@ -67,7 +66,7 @@ header {
   background-repeat: no-repeat;
   background-size: 100%;
   height: 12rem;
-  margin-bottom: 0rem;
+  margin-bottom: 0;
 }
 
 .projects-container {
@@ -88,7 +87,7 @@ header {
 }
 
 .project-infor {
-  background-color: #1A2236;
+  background-color: #1a2236;
   display: flex;
   flex-direction: column;
   padding: 0.625rem;
@@ -96,30 +95,27 @@ header {
 
 .project-name {
   color: white;
-  font-family: 'Poppins', arial;
+  font-family: 'Poppins', arial, sans-serif;
   font-size: 1.25rem;
   font-weight: 300;
   line-height: 1rem;
 }
 
-
 .tech-list {
   display: flex;
   justify-content: space-between;
   list-style: none;
-  font-family: 'Poppins', arial;
+  font-family: 'Poppins', arial, sans-serif;
   font-size: 0.625rem;
-  font-weight: 300; 
-  font-family: 'Poppins', arial;
+  font-weight: 300;
   margin-bottom: 6.25rem;
   padding: 0 5px;
-
 }
+
 .tech-list li {
   margin-right: 3.125rem;
-  background-color: #98DEDE;
+  background-color: #98dede;
 }
-
 
 .see-project {
   color: white;
@@ -137,40 +133,40 @@ header {
 }
 
 .about-me-container {
-display: flex;
-flex-direction: column;
-margin-top: 0rem;
-margin-right: 0.875rem;
-margin-left: 1rem;
-box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  margin-top: 0;
+  margin-right: 0.875rem;
+  margin-left: 1rem;
+  box-sizing: border-box;
 }
 
 .about-me-container h1 {
-  font-family: 'Playfair Display', arial;
+  font-family: 'Playfair Display', arial, sans-serif;
   font-weight: 400;
   line-height: 3.125rem;
   font-size: 3.125rem;
 }
 
 .description {
-  font-family: 'Poppins', arial;
+  font-family: 'Poppins', arial, sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.313rem;
-  letter-spacing: 0em;
+  letter-spacing: 0;
   margin-top: -1.875rem;
 }
 
 .cv-button {
   width: 100%;
   height: 3.125rem;
-  background-color: #1A2236;
+  background-color: #1a2236;
   color: white;
-  font-family: 'Poppins', arial;
+  font-family: 'Poppins', arial, sans-serif;
   font-size: 1rem;
   font-weight: 500;
   line-height: 1.5rem;
-  letter-spacing: 0em;
+  letter-spacing: 0;
   text-align: center;
   background-image: url(icons/ic_download.svg);
   background-repeat: no-repeat;
@@ -178,18 +174,15 @@ box-sizing: border-box;
   margin-bottom: 1.25rem;
 }
 
-
 .knowledge-container {
   display: grid;
   grid-template-rows: 18.063rem 18.063rem 18.063rem;
   gap: 0.625rem;
   padding-bottom: 1.25rem;
-
 }
 
-
 .language {
-  background-color: #1C528A;
+  background-color: #1c528a;
   background-image: url(icons/ic_languages_mob.svg);
   background-repeat: no-repeat;
   background-position: right bottom;
@@ -197,7 +190,7 @@ box-sizing: border-box;
 }
 
 .frameworks {
-  background-color: #E2505C;
+  background-color: #e2505c;
   background-image: url(icons/Group\ 18.png);
   background-repeat: no-repeat;
   background-position: right bottom;
@@ -205,7 +198,7 @@ box-sizing: border-box;
 }
 
 .skills {
-  background-color: #FEBF52;
+  background-color: #febf52;
   background-image: url(icons/ic_skills.svg);
   background-repeat: no-repeat;
   background-position: right bottom;
@@ -214,30 +207,29 @@ box-sizing: border-box;
 }
 
 .know-h3 {
-  font-family: 'Poppins', arial;
+  font-family: 'Poppins', arial, sans-serif;
   font-size: 1.25rem;
   font-weight: 800;
   line-height: 1.875rem;
   margin-left: 4.125rem;
   width: 7.25rem;
   height: 1.875rem;
-
 }
 
 .knowledge-container ul {
-font-family: 'Poppins', arial;
-font-size: 1rem;
-font-weight: 600;
-line-height: 1.688rem;
-letter-spacing: -0.0525em;
-text-align: left;
-width: 11.125rem;
-height: 8.438rem;
-margin-left: 2.875rem;
+  font-family: 'Poppins', arial, sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 1.688rem;
+  letter-spacing: -0.0525em;
+  text-align: left;
+  width: 11.125rem;
+  height: 8.438rem;
+  margin-left: 2.875rem;
 }
 
 .contact-me {
-  background-color: #F9F9FA;
+  background-color: #f9f9fa;
   background-image: url(icons/image_geometry_1.png);
   background-repeat: no-repeat;
   padding: 6.625rem 0.875rem 1.94rem 1.125rem;
@@ -248,20 +240,18 @@ margin-left: 2.875rem;
 }
 
 .getstarted {
-  font-family: 'Playfair Display', arial;
+  font-family: 'Playfair Display', arial, sans-serif;
   font-size: 3.125rem;
   font-weight: 400;
   line-height: 3.125rem;
   margin-bottom: 1.25rem;
-
 }
 
 .interest {
-  font-family: 'Poppins', arial;
+  font-family: 'Poppins', arial, sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
   margin-bottom: 0.875rem;
-
 }
 
 label {
@@ -269,9 +259,6 @@ label {
   font-size: 0.625rem;
   color: #7d7c84;
 }
-.contact-me input {
-  margin-bottom: 1.25x;
- }
 
 .contact-me textarea {
   height: 7rem;
@@ -286,38 +273,37 @@ label {
   color: #1a2236;
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
- }
+}
 
- input {
-  margin-bottom: 0;
+.contact-me input {
+  margin-bottom: 1.25rem;
   height: 3.25rem;
-  padding: 1.44rem 1rem 0.31rem 1rem;
   display: block;
   width: 100%;
   border: 0.063rem solid #dfdfe0;
-  border-radius: 0.313;
-  box-sizing: border-box;
-  align-items: flex-start;
+  border-radius: 0.313rem;
   font-size: 0.875rem;
   color: #1a2236;
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
- }
+}
+
+.contact-me .collaboration {
+  margin-top: 1.25rem;
+}
+
 .social-icons {
   /* padding: 1.75rem 0.875rem 2.25rem 1.125rem; */
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
   width: auto;
-
 }
 
-
-  
 .get-resume {
   border: none;
   background-color: transparent;
-  background-image: url(icons/Union\ \(2\).png);
+  background-image: url(icons/Union\ \(2\) .png);
   background-repeat: no-repeat;
   background-position: right center;
   height: 3rem;
@@ -330,25 +316,13 @@ label {
   margin: 0 auto;
 }
 
-.collaboration {
-  width: 100%;
-  height: 2.75rem;
-  border: none;
-  background-color: #1a2236;
-  margin-top: 1.25rem;
-  font-weight: 500;
-  font-size: 1rem;
-}
-
 .social-icons li {
   list-style: none;
 }
 
 .footer {
   padding: 1.75rem 0.875rem 2.25rem 1.125rem;
-  background-color: #1A2236;
+  background-color: #1a2236;
   width: 100%;
   height: 6.25rem;
 }
-
-
