--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
-body {
-  min-width: 23.438rem;
-  padding: 0;
+* {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -15,49 +14,45 @@ header {
 }
 
 .menu-burger {
-  margin-left: 17.75rem;
-  margin-top: 1.188rem;
-  display: flex;
   margin-right: 1.25rem;
 }
 
 .homepage {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  overflow-y: hidden;
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  align-self: auto;
-  margin: -1.875rem 1.25rem 1.25rem 1.25rem;
+  height: 21rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-left: 0.625rem;
+  margin-right: 0.625rem;
 }
 
 .container h1 {
   font-family: 'Playfair Display', arial, sans-serif;
   font-size: 3.125rem;
+  line-height: 3.125rem;
   font-weight: 400;
 }
 
 .container p {
   font-family: 'Poppins', arial, sans-serif;
   font-size: 0.875rem;
-  margin-top: -2.188rem;
+  padding-top: 0.938;
 }
 
 .collaboration {
   width: 100%;
   height: 3.125rem;
-  margin-bottom: 1rem;
+  margin-top: 1.25rem;
   background-color: #1a2236;
   color: white;
   font-family: Poppins, arial, sans-serif;
   font-size: 1rem;
   font-weight: 500;
-  line-height: 1.5rem;
-  letter-spacing: 0;
-  text-align: center;
   cursor: pointer;
 }
 
@@ -66,7 +61,6 @@ header {
   background-repeat: no-repeat;
   background-size: 100%;
   height: 12rem;
-  margin-bottom: 0;
 }
 
 .projects-container {
@@ -75,22 +69,28 @@ header {
 }
 
 .projects-container h1 {
-  margin: 1.25rem;
+  margin-top: 1.875rem;
+  margin-bottom: 1.25rem;
+  margin-left: 1rem;
   font-family: 'Playfair Display', arial, sans-serif;
   font-size: 3.125rem;
   font-weight: 400;
+  color: #1a2236;
 }
 
 .preview {
   width: 100%;
-  display: block;
 }
 
-.project-infor {
+.project-card {
+  /* display: flex;
+  flex-direction: column; */
+}
+
+.project-card .project-infor {
   background-color: #1a2236;
-  display: flex;
-  flex-direction: column;
-  padding: 0.625rem;
+  height: 9.75rem;
+  padding: 1.25rem;
 }
 
 .project-name {
@@ -103,42 +103,37 @@ header {
 
 .tech-list {
   display: flex;
-  justify-content: space-between;
   list-style: none;
+  justify-content: space-between;
   font-family: 'Poppins', arial, sans-serif;
   font-size: 0.625rem;
   font-weight: 300;
-  margin-bottom: 6.25rem;
-  padding: 0 5px;
 }
 
 .tech-list li {
-  margin-right: 3.125rem;
   background-color: #98dede;
+  margin-top: 1rem;
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
 }
 
 .see-project {
   color: white;
   background-image: url(icons/Union.png);
-  border: 1px solid white;
+  border: 1px solid rgb(162, 161, 161);
   background-repeat: no-repeat;
   background-position: 90%;
-  width: 8.125rem;
-  margin-top: -5.25rem;
-  padding: 0.625rem;
-  font-weight: 500;
-  font-size: 1rem;
-  text-decoration: none;
-  line-height: 1.5rem;
+  margin-right: 10.625rem;
+  margin-top: 1.25rem;
+  padding: 0.438rem;
 }
 
 .about-me-container {
   display: flex;
   flex-direction: column;
-  margin-top: 0;
-  margin-right: 0.875rem;
-  margin-left: 1rem;
-  box-sizing: border-box;
+  margin: 2rem 0.875rem;
 }
 
 .about-me-container h1 {
@@ -146,6 +141,7 @@ header {
   font-weight: 400;
   line-height: 3.125rem;
   font-size: 3.125rem;
+  margin-bottom: 0.625rem;
 }
 
 .description {
@@ -153,8 +149,6 @@ header {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.313rem;
-  letter-spacing: 0;
-  margin-top: -1.875rem;
 }
 
 .cv-button {
@@ -166,19 +160,18 @@ header {
   font-size: 1rem;
   font-weight: 500;
   line-height: 1.5rem;
-  letter-spacing: 0;
   text-align: center;
   background-image: url(icons/ic_download.svg);
   background-repeat: no-repeat;
   background-position: 75%;
-  margin-bottom: 1.25rem;
+  margin-top: 1.25rem;
+  margin-bottom: 1.875rem;
 }
 
 .knowledge-container {
   display: grid;
   grid-template-rows: 18.063rem 18.063rem 18.063rem;
   gap: 0.625rem;
-  padding-bottom: 1.25rem;
 }
 
 .language {
@@ -203,7 +196,6 @@ header {
   background-repeat: no-repeat;
   background-position: right bottom;
   color: white;
-  padding-bottom: 1.25rem;
 }
 
 .know-h3 {
@@ -212,20 +204,16 @@ header {
   font-weight: 800;
   line-height: 1.875rem;
   margin-left: 4.125rem;
-  width: 7.25rem;
-  height: 1.875rem;
+  margin-top: 3.125rem;
+  margin-bottom: 1.25rem;
 }
 
-.knowledge-container ul {
+.knowledge-container .techlist {
   font-family: 'Poppins', arial, sans-serif;
   font-size: 1rem;
   font-weight: 600;
   line-height: 1.688rem;
-  letter-spacing: -0.0525em;
-  text-align: left;
-  width: 11.125rem;
-  height: 8.438rem;
-  margin-left: 2.875rem;
+  margin-left: 4.875rem;
 }
 
 .contact-me {
@@ -236,7 +224,6 @@ header {
   width: 100%;
   display: flex;
   flex-direction: column;
-  min-height: auto;
 }
 
 .getstarted {
@@ -254,79 +241,63 @@ header {
   margin-bottom: 0.875rem;
 }
 
-label {
+.contact-me label {
   font-weight: 400;
   font-size: 0.625rem;
   color: #7d7c84;
-}
-
-.contact-me textarea {
-  height: 7rem;
-  padding: 0.875rem 1rem;
-  display: block;
-  width: 100%;
-  border: 0.063rem solid lightgray;
-  border-radius: 0.313rem;
-  box-sizing: border-box;
-  margin: 0;
-  font-size: 0.875rem;
-  color: #1a2236;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 400;
+  font-family: Poppins, arial, sans-serif;
 }
 
 .contact-me input {
-  margin-bottom: 1.25rem;
-  height: 3.25rem;
   display: block;
-  width: 100%;
-  border: 0.063rem solid #dfdfe0;
   border-radius: 0.313rem;
-  font-size: 0.875rem;
-  color: #1a2236;
-  font-family: 'Poppins', sans-serif;
+  border: 0.063rem solid lightgray;
+  width: 100%;
+  padding-left: 0.313rem;
+  height: 3.25rem;
+  font-family: Poppins, sans-serif, arial, helvetica;
   font-weight: 400;
+  font-size: 0.875rem;
 }
 
-.contact-me .collaboration {
-  margin-top: 1.25rem;
+.contact-me textarea {
+  padding-left: 0.313rem;
+  padding-top: 0.625rem;
+  height: 7rem;
+  display: block;
+  border: 0.063rem solid lightgray;
+  border-radius: 0.313rem;
+  font-size: 0.875rem;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  width: 100%;
+}
+
+.footer {
+  background-color: #1a2236;
+  width: 100%;
+  height: 8.563rem;
 }
 
 .social-icons {
-  /* padding: 1.75rem 0.875rem 2.25rem 1.125rem; */
   display: flex;
   justify-content: space-around;
-  flex-wrap: wrap;
-  width: auto;
+  list-style: none;
+  margin-top: 1.25rem;
 }
 
 .get-resume {
   border: none;
   background-color: transparent;
-  background-image: url(icons/Union\ \(2\).png);
+  background-image: url(icons/Union\ \(2\) .png);
   background-repeat: no-repeat;
   background-position: right center;
-  height: 3rem;
+  padding-right: 2.5rem;
   color: #92dcdc;
-  display: block;
-  width: 10.25rem;
   font-weight: 500;
   font-size: 1rem;
-  text-align: left;
-  margin: 0 auto;
-}
-
-.social-icons li {
-  list-style: none;
-}
-
-.footer {
-  padding: 1.75rem 0.875rem 2.25rem 1.125rem;
-  background-color: #1a2236;
-  width: 100%;
-  height: 6.25rem;
-}
-
-@media only screen and (min-width: 768px) {
- body {width: 100%;}
+  margin-top: 2.5rem;
+  margin-left: 6.25rem;
+  font-family: poppins, sans-serif, arial;
+  line-height: 1.5rem;
 }
