--- a/styles.css
+++ b/styles.css
@@ -82,11 +82,6 @@ header {
   width: 100%;
 }
 
-.project-card {
-  /* display: flex;
-  flex-direction: column; */
-}
-
 .project-card .project-infor {
   background-color: #1a2236;
   height: 9.75rem;
@@ -161,7 +156,7 @@ header {
   font-weight: 500;
   line-height: 1.5rem;
   text-align: center;
-  background-image: url(icons/ic_download.svg);
+  background-image: url(icons/ic_download.png);
   background-repeat: no-repeat;
   background-position: 75%;
   margin-top: 1.25rem;
@@ -192,7 +187,7 @@ header {
 
 .skills {
   background-color: #febf52;
-  background-image: url(icons/ic_skills.svg);
+  background-image: url(icons/ic_skills.png);
   background-repeat: no-repeat;
   background-position: right bottom;
   color: white;
@@ -289,7 +284,7 @@ header {
 .get-resume {
   border: none;
   background-color: transparent;
-  background-image: url(icons/Union\ \(2\) .png);
+  background-image: url(icons/Union\ \(2\).png);
   background-repeat: no-repeat;
   background-position: right center;
   padding-right: 2.5rem;
