--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 header {
-  background-image: url(./icons/image_geometry_1.png);
+  background-image: url("./icons/image_geometry_1.png");
   background-repeat: no-repeat;
   height: 4.625rem;
   display: flex;
@@ -25,10 +25,7 @@ header {
 
 .container {
   height: 21rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  margin-left: 0.625rem;
-  margin-right: 0.625rem;
+  margin: 1rem 0.625rem;
 }
 
 .container h1 {
@@ -39,7 +36,7 @@ header {
 }
 
 .container p {
-  font-family: 'Poppins', arial, sans-serif;
+  font-family: Poppins, arial, sans-serif;
   font-size: 0.875rem;
   padding-top: 0.938;
 }
@@ -57,7 +54,7 @@ header {
 }
 
 .image1 {
-  background-image: url(icons/image_geometry_2.png);
+  background-image: url("icons/image_geometry_2.png");
   background-repeat: no-repeat;
   background-size: 100%;
   height: 12rem;
@@ -90,7 +87,7 @@ header {
 
 .project-name {
   color: white;
-  font-family: 'Poppins', arial, sans-serif;
+  font-family: Poppins, arial, sans-serif;
   font-size: 1.25rem;
   font-weight: 300;
   line-height: 1rem;
@@ -100,7 +97,7 @@ header {
   display: flex;
   list-style: none;
   justify-content: space-between;
-  font-family: 'Poppins', arial, sans-serif;
+  font-family: Poppins, arial, sans-serif;
   font-size: 0.625rem;
   font-weight: 300;
 }
@@ -108,16 +105,13 @@ header {
 .tech-list li {
   background-color: #98dede;
   margin-top: 1rem;
-  padding-left: 0.625rem;
-  padding-right: 0.625rem;
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
+  padding: 0.125rem 0.625rem;
 }
 
 .see-project {
   color: white;
-  background-image: url(icons/Union.png);
-  border: 1px solid rgb(162, 161, 161);
+  background-image: url("icons/Union.png");
+  border: 1px solid rgb(162 161 161);
   background-repeat: no-repeat;
   background-position: 90%;
   margin-right: 10.625rem;
@@ -140,7 +134,7 @@ header {
 }
 
 .description {
-  font-family: 'Poppins', arial, sans-serif;
+  font-family: Poppins, arial, sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.313rem;
@@ -151,12 +145,12 @@ header {
   height: 3.125rem;
   background-color: #1a2236;
   color: white;
-  font-family: 'Poppins', arial, sans-serif;
+  font-family: Poppins, arial, sans-serif;
   font-size: 1rem;
   font-weight: 500;
   line-height: 1.5rem;
   text-align: center;
-  background-image: url(icons/ic_download.png);
+  background-image: url("icons/ic_download.png");
   background-repeat: no-repeat;
   background-position: 75%;
   margin-top: 1.25rem;
@@ -171,7 +165,7 @@ header {
 
 .language {
   background-color: #1c528a;
-  background-image: url(icons/ic_languages_mob.svg);
+  background-image: url("icons/ic_languages_mob.svg");
   background-repeat: no-repeat;
   background-position: right bottom;
   color: white;
@@ -179,7 +173,7 @@ header {
 
 .frameworks {
   background-color: #e2505c;
-  background-image: url(icons/Group\ 18.png);
+  background-image: url("icons/Group\ 18.png");
   background-repeat: no-repeat;
   background-position: right bottom;
   color: white;
@@ -187,14 +181,14 @@ header {
 
 .skills {
   background-color: #febf52;
-  background-image: url(icons/ic_skills.png);
+  background-image: url("icons/ic_skills.png");
   background-repeat: no-repeat;
   background-position: right bottom;
   color: white;
 }
 
 .know-h3 {
-  font-family: 'Poppins', arial, sans-serif;
+  font-family: Poppins, arial, sans-serif;
   font-size: 1.25rem;
   font-weight: 800;
   line-height: 1.875rem;
@@ -204,7 +198,7 @@ header {
 }
 
 .knowledge-container .techlist {
-  font-family: 'Poppins', arial, sans-serif;
+  font-family: Poppins, arial, sans-serif;
   font-size: 1rem;
   font-weight: 600;
   line-height: 1.688rem;
@@ -213,7 +207,7 @@ header {
 
 .contact-me {
   background-color: #f9f9fa;
-  background-image: url(icons/image_geometry_1.png);
+  background-image: url("icons/image_geometry_1.png");
   background-repeat: no-repeat;
   padding: 6.625rem 0.875rem 1.94rem 1.125rem;
   width: 100%;
@@ -230,7 +224,7 @@ header {
 }
 
 .interest {
-  font-family: 'Poppins', arial, sans-serif;
+  font-family: Poppins, arial, sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
   margin-bottom: 0.875rem;
@@ -263,7 +257,7 @@ header {
   border: 0.063rem solid lightgray;
   border-radius: 0.313rem;
   font-size: 0.875rem;
-  font-family: 'Poppins', sans-serif;
+  font-family: Poppins, sans-serif;
   font-weight: 400;
   width: 100%;
 }
@@ -284,7 +278,7 @@ header {
 .get-resume {
   border: none;
   background-color: transparent;
-  background-image: url(icons/Union\ \(2\).png );
+  background-image: url("icons/Union\ \(2\).png" );
   background-repeat: no-repeat;
   background-position: right center;
   padding-right: 2.5rem;
